Revision history for Perl extension Alien::Prototype.

1.6.0.1_0   Mon Oct  1 11:58 PDT 2007
    - update to Prototype 1.6.0_rc0
    - reworked installation routines, internally more flexible

1.5.1.2     Mon Oct  1 11:56 PDT 2007
    - update to Prototype 1.5.1.1

1.5.1.1     Mon Oct  1 11:15 PDT 2007
    - update to Prototype 1.5.1

1.5.0.1     Mon Oct  1 11:09 PDT 2007
    - installs Prototype 1.5.0