@@ -1,4 +1,5 @@
 Build.PL
+Makefile.PL
 Changes
 MANIFEST
 MANIFEST.SKIP
